--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="theme-color" content="#0B0B0B" />
+  <meta name="theme-color" content="#050F24" />
   <meta name="description" content="Noiva — luxury clothing brand. Elevated essentials, premium quality, modern design." />
 
   <title>Noiva — Luxury Clothing</title>
